k8s-infra-apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: self-signed-ca-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/href: "https://argocd.k8s.local"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/group: App
    gethomepage.dev/icon: argocd.svg
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.k8s.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - argocd.k8s.local
      secretName: argocd-tls-secret
